stylesheet.css
/*------------------------------------------------
  Custom Youtube Stylesheet
  Author: Nicholas Spalding
  Github Repo: https://github.com/kolop315/Youtube-Stylesheet
------------------------------------------------*/

:root{
  --like-color: var(--blue-500);
  --like-hover-color: var(--blue-300);
  --like-bar-color: var(--green-500);
  --dislike-color: var(--red-500);
  --dislike-hover-color: var(--red-300);
  --dislike-bar-color: var(--red-500);
  
  --subscribe-color: #FFF;
  --subscribe-background: #F00;
  
  --comment-author-color: var(--yt-spec-text-primary);
  --comment-author-background: var(--yt-spec-error-background);
  --comment-badge-color: var(--blue-500);

  --comment-buttons-max-width: 50%;
  --comment-buttons-total-width: 25%;
  --comment-buttons-margins: 4px 0 -12px 2%;
  --comment-buttons-justification: space-between;
  --comment-footer-justification: flex-end;

  --shorts-comment-buttons-total-width: 100%;
  --shorts-comment-buttons-margins: 0 0 0 3%;

  --home-categories-width-mod: 0.8;
  --home-page-row-margin: 24px;

  --blue-500: #4285F4;
  --blue-300: #76A7FA;
  --green-500: #0F9D58;
  --red-500: #DB4437;
  --red-300: #E57368;
}

/*------------------------------------------------
  Thumbnail Styles
------------------------------------------------*/

/* Remove rounded corners of thumbnails */
#thumbnail{
  border-radius: 0px;
}

/*------------------------------------------------
  Video Player Styles
------------------------------------------------*/

/* Make sure the corners of the player aren't rounded */
ytd-player{
  border-radius: 0;
}

/*------------------------------------------------
  Video Information Styles
------------------------------------------------*/

/* Color of the subscribe button, when not subscribed to a channel */
button[aria-label^="Subscribe to"]{
  background-color: var(--subscribe-background);
  color: var(--subscribe-color);
}

/* Color when a comment or shorts like button is pressed */
#like-button [aria-pressed="true"] svg{
  fill: var(--like-color);
}

/* Color for when the animated like button is pressed */
button[aria-label*="ike"][aria-pressed="true"] yt-animated-icon *{
  fill: var(--like-color);
  stroke: var(--like-color);
}

/* Color when a dislike button is pressed */
button[aria-label*="islike"][aria-pressed="true"] svg,
#dislike-button [aria-pressed="true"] svg{
  fill: var(--dislike-color);
}

/* Color when hovering over comment and shorts like buttons. the not selector is because on shorts #like-button contains both like and dislike buttons for some reason */
#like-button:not(.button-container):hover svg{
  fill: var(--like-hover-color);
}

/* Color when hovering over the video's like button */
button[aria-label*="ike"]:hover yt-animated-icon *{
  fill: var(--like-hover-color);
  stroke: var(--like-hover-color);
}

/* Color when hovering over dislike buttons */
button[aria-label*="islike"]:hover svg,
#dislike-button:hover svg{
  fill: var(--dislike-hover-color);
}

/* Remove left margin to put the view count aligned with the title and chanel info */
#description-inner{
  margin-left: 0px;
}

/* Make description's background transparent, and adjust top margin */
#description{
  background-color:#0000;
  margin-top: -0.25em;
}

/* Separate View Count from the rest of the description*/
#description #info-container::after{
  content: "";
  width: 100%;
  height:1px;
  background-color: var(--yt-spec-icon-disabled);
  display: block;
  margin-top: 1em;
}

/* Pad the top and bottom of the actual description, to separate it from the view counter and "show more" elements */
#description-inline-expander, #expand{
  margin-left: 12px;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

/*------------------------------------------------
  Commenter Name Styling
------------------------------------------------*/

/* Comment users' name color */
#header-author a :first-child{
  color: var(--comment-author-color);
}

/* Set background color of comments by the video's owner */
#header-author [creator]{
  background: var(--comment-author-background);
}

/* Set text color of channel owner's name in their comments and make it bold */
#header-author [creator] #text{
  color: var(--yt-spec-text-primary-inverse);
  font-weight: bold;
}

/* Comment users' badge color */
ytd-author-comment-badge-renderer svg, .badge-style-type-verified svg{
  fill: var(--comment-badge-color);
}

/*------------------------------------------------
  Home Page's 'chips' Category Tablist Styles
------------------------------------------------*/

/* Center the Category scroll bar on the Home page and add a spacing from the top*/
[page-subtype="home"] ytd-feed-filter-chip-bar-renderer{
  justify-content: center;
  width: 100%;
  margin-top: 16px;
}

/* Make the Category Bar on the Home Page rounded, spaced from its sides, and have relative positioning */
[page-subtype="home"] #chips-wrapper.ytd-feed-filter-chip-bar-renderer{
  position: relative;
  top: 0px;
  width: calc(var(--ytd-rich-grid-chips-bar-width) * var(--home-categories-width-mod));
  border: 2px solid var(--yt-spec-10-percent-layer);
  border-radius: 32px;
}

/* Have the chips have a margin on the left and right to account for the rounded edges */
#scroll-container.ytd-feed-filter-chip-bar-renderer{
  margin-left: 8px;
  margin-right: 8px;
}

/* Adjust the top margin for chip items to have them be more centered in the scroll container */
#scroll-container yt-chip-cloud-chip-renderer{
  margin-top:10px;
}

/* Round the right arrow button and make its background solid */
#right-arrow-button.ytd-feed-filter-chip-bar-renderer{
  border-radius: 0 32px 32px 0;
  background: var(--yt-spec-brand-background-solid);
}

/* Round the left arrow button and make its background solid */
#left-arrow-button.ytd-feed-filter-chip-bar-renderer{
  border-radius: 32px 0 0 32px;
  background: var(--yt-spec-brand-background-solid);
}

/*------------------------------------------------
  Home and Subscription Pages' Contents Styles
------------------------------------------------*/

/* Change contents' content justification to better fill space when an ad element may mysteriously be missing */
[page-subtype="home"] #contents{
  justify-content: space-between;
}

/* Reduce margin between rows on the home and subscription pages */
[page-subtype="home"] #contents #contents ytd-rich-item-renderer, 
[page-subtype="subscriptions"] #contents #contents ytd-rich-item-renderer{
  margin-bottom:var(--home-page-row-margin);
}

/* Remove Shorts rows from the home and subscription pages */
[page-subtype="home"] [is-shorts],
[page-subtype="subscriptions"] [is-shorts]{
  display:none;
}

/*------------------------------------------------
  Comment Text Box Styles
------------------------------------------------*/

/* Make comment box have a rounded outline*/
#input-container .input-wrapper, #placeholder-area{
  border: 1px solid var(--yt-spec-10-percent-layer);
  border-radius: 8px;
  padding: 8px;
}

/* Add some space to the bottom of the comment box to better center the text within it */
#input-container.ytd-commentbox .input-wrapper{
  padding-bottom: 4px;
}

/* Remove underline from comment box */
#input-container.ytd-commentbox .underline{
  display: none;
}

/* Center the elements in the footer of the comment box */
#footer.ytd-commentbox{
  justify-content: var(--comment-footer-justification);
}

/* Elements in the footer of the comment box that are not buttons are allotted 0 space to grow into(flex be wack) */
#footer.ytd-commentbox >:not(#buttons){
  flex: 0;
}

/* Set the total width of the buttons(combined) */
#buttons.ytd-commentbox{
  width: var(--comment-buttons-total-width);
  justify-content: var(--comment-buttons-justification);
}

/* Set buttons(the actual buttons not the #buttons element which holds the buttons) to fill up their parent with some margin for spacing them from eachother */
#buttons.ytd-commentbox ytd-button-renderer{
  display: flex;
  max-width: var(--comment-buttons-max-width);
  flex: 1;
  margin: var(--comment-buttons-margins);
}

/* There is an options button that doesn't do shit for some reason so remove that crap :) */
#buttons.ytd-commentbox >:not(ytd-button-renderer)
{
  display: none;
}

/* Change background color of cancel button */
#cancel-button.ytd-commentbox button{
  background: var(--yt-spec-icon-disabled);
}

/* Have the text elements of the buttons fill the buttons so they can be properly selected */
#buttons.ytd-commentbox a.ytd-button-renderer{
  width: 100%;
  height: 100%;
}

/* Fix the width of comment buttons when on the youtube shorts page */
ytd-shorts #buttons.ytd-commentbox{
  width: var(--shorts-comment-buttons-total-width);
}

/* Fix the margin of comment buttons when on the youtube shorts page */
ytd-shorts #buttons.ytd-commentbox ytd-button-renderer{
  margin: var(--shorts-comment-buttons-margins);
}

